<resources>
    <string name="app_name">CLE Transit</string>
    <string name="action_settings">Settings</string>
    <string name="next_bus_train">Arrivals</string>
    <string name="service_alerts">Service Alerts</string>
    <string name="manage_locations">Manage Locations</string>
    <string name="line">Line</string>
    <string name="station">Station</string>
    <string name="destination">Destination</string>
    <string name="direction">Direction</string>
    <string name="time">Time</string>
    <string name="no_destination">---</string>
    <string name="map">System Map</string>
    <string name="no_time">---</string>
    <string name="select_favorite">Select Favorite</string>
    <string name="add_favorite">Add favorite</string>
    <string name="not_available">---</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="favorite_locations">Favorite Locations</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="favorite_save_name_prompt">Please enter the name you want to save the current station as.</string>
    <string name="there_are_n_service_alerts">%d service alert(s) </string>
    <string name="title_maptype_list">Maps</string>
    <string name="title_maptype_detail">Map</string>
    <string name="whichdir">Which direction?</string>
    <string name="deletefavorite">Delete Favorite</string>
    <string name="deletefavoritemsg">Are you sure you want to delete the station "%s"?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="main_menu_label">Cleveland Transit</string>
    <string name="network">Network</string>
    <string name="nonetworkmsg">You need to be connected to the internet for the service alerts and next bus/train pages to work.</string>
    <string name="error">Error</string>
    <string name="alreadyfavorited">You already have this saved as a favorite. If you want to rename it, hit the favorites button and then click the pencil icon by the entry.</string>
    <string name="prototypewarning">This app is still in beta and probably still has some bugs. If you have any feedback, please email helpdesk@futuresight.org.</string>
    <string name="warning">Beta notice</string>
    <string name="near_me">Near Me</string>
    <string name="title_activity_near_me">Near Me</string>
    <string name="escelstatus">Escalator/Elevator Status</string>
    <string name="order_by_closeness">Order by closeness</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="sort_favorites">Sort favorites</string>
    <string name="caching">Caching durations (hours)</string>
    <string name="lines">Lines</string>
    <string name="stations">Stations</string>
    <string name="escalator_elevator_alerts">Escalator/Elevator Alerts</string>
    <string name="station_locations">Station Locations</string>
    <string name="other">Other</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="reset_everything">Reset Everything</string>
    <string name="loading_stops">Loading stops</string>
    <string name="take_a_while">This may take a while.</string>
    <string-array name="sort_favorites_options">
        <item>Alphabetical</item>
        <item>Closeness</item>
    </string-array>
    <string name="loading_lines">Loading lines</string>
    <string name="view_on_map">View on map</string>
    <string name="nearbystations">Nearby stations (within %d meters of where you clicked)</string>
    <string name="confirmfrydb">Are you sure you want to erase everything? This means you will lose all of your settings and saved locations.</string>
    <string name="image_credits">The icons used in the &quot;Near Me&quot; section app were taken from Flaticon.com. The base GPS pin (https://www.flaticon.com/free-icon/gps-pin_8131) and bus icons (http://www.freepik.com/free-icon/front-of-bus_695855.htm) are by Freepik, the train icon is by Scott de Jonge (https://www.flaticon.com/free-icon/train-on-railroad_8661), the transfer icon is made by Gregor Cresnar (https://www.flaticon.com/free-icon/transfer_159791), and the star icon is by Madebyoliver (https://www.flaticon.com/free-icon/star_148841).</string>
    <string name="nextconnectdown">It appears that the source of the arrival information is temporarily down. Please come back later. We apologize for the inconvenience.</string>
    <string name="favorite_pin">Favorite pin</string>
    <string name="rail_pin">Rail pin</string>
    <string name="bus_pin">Bus pin</string>
    <string name="add_home_screen_icon">Add home screen icon</string>
    <string name="shortcut_text_prompt">What text do you want to appear on the homescreen for this shortcut?</string>
    <string name="choose_line">Choose line</string>
    <string name="select_route">Select a route</string>
    <string name="no_schedule">Unfortunately, no schedule is available for this stop. We apologize for the inconvenience.</string>
    <string name="schedule">Schedule</string>
    <string name="full_schedule">See full schedule</string>
    <string name="loadingellipsis">Loading...</string>

    <string name="title_activity_near_me_search">NearMeSearchActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="allroutes">All routes</string>
    <string name="xearly">%d early</string>
    <string name="xlate">%d late</string>
    <string name="ontime">On time</string>
    <string name="scheduled">Scheduled</string>
    <string name="failed_to_load_try_again">Failed to load. Click here to try again.</string>
    <string name="failed_to_load_stops_try_again">Failed to load stops. Try again?</string>
    <string name="failed_to_load_directions_try_again">Failed to load directions. Try again?</string>
    <string name="line_not_found">The line you were searching for was not found. That probably means it is not running today.</string>
    <string name="failed_to_load_lines_try_again">Failed to load lines. Try again?</string>
    <string name="failed_to_load_alerts_try_again">Failed to load alerts. Try again?</string>
    <string name="failed_to_load_arrivals_try_again">Failed to load arrivals. Try again?</string>
    <string name="data">Data</string>
    <string name="data_credits">All of the relevant information in this app originates from the Greater Cleveland Regional Transit Authority (GCRTA). The arrivals information, stop lists, and map paths come from the GCRTA NextConnect service, while service alerts, system maps, and escalator/elevator statuses come directly from the GCRTA website.</string>
    <string name="images">Images</string>
    <string name="focusonlyonline">Do you want to focus only on this line?</string>
    <string name="showalllines">Show all lines</string>
    <string name="title_activity_live_map">Live Map</string>
</resources>
