<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.futuresight.clevelandrtanextbustrain.MainMenu"
    tools:showIn="@layout/activity_main_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <Button
            android:id="@+id/nextBusTrainBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableLeft="@android:drawable/ic_menu_recent_history"
            android:onClick="openNextBusTrainPage"
            android:text="@string/next_bus_train" />

        <Button
            android:id="@+id/serviceAlertsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_dialog_alert"
            android:onClick="openServiceAlertsPage"
            android:text="@string/service_alerts" />

        <Button
            android:id="@+id/manageLocationsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableLeft="@android:drawable/ic_input_get"
            android:onClick="openManageLocationsPage"
            android:text="@string/favorite_locations" />

        <Button
            android:id="@+id/nearMeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_compass"
            android:onClick="openNearMe"
            android:text="@string/near_me" />

        <Button
            android:id="@+id/mapBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_dialog_map"
            android:onClick="openMap"
            android:text="@string/map" />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_preferences"
            android:onClick="openSettings"
            android:text="@string/settings" />

        <Button
            android:id="@+id/creditsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_help"
            android:onClick="openCredits"
            android:text="Credits" />

    </LinearLayout>
</RelativeLayout>
